Reorganized project to host frontend and backend together

--- a/templates/index.html
+++ b/templates/index.html
@@ -150,7 +150,7 @@
     chatbox.scrollTop = chatbox.scrollHeight;
 
     try {
-      const response = await fetch("http://localhost:5000/chat", {
+      const response = await fetch("/chat", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ message }),
